--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
         </ul>
       </nav>
-          <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="container" tabindex="0">
+          <div data-spy="scroll" data-target="#navbar-example2" data-bs-offset="0" class="container" tabindex="0">
             <!--About Me Row-->
             <div class="row justify-content-center" id="scrollspyHeading1">
               <!--Heading for About Me-->
@@ -209,15 +209,15 @@
                 <h1><i class="fa-regular fa-file-code"></i> WebDev Class</h1>
               </div>
               <!--WebDev Class Content-->
+              <!--Assignment 0-->
               <div class="row">
-                <!--Assignment 0-->
                 <div class="row">
                   <h2>Assignment 0 - Area Maps</h2>
                 </div>
                 <div class="row">
                   <div class="col-lg">
-                    <a href="#">
-                      <img alt="Assignment0 Image" src="Assignment0Image.png" width="500" height="500">
+                    <a href="Assignments/Assignment0/Assignment0.html">
+                      <img alt="Assignment0 Image" src="Images/Assignment0Image.png" width="650" height="500">
                     </a>
                   </div>
                   <div class="col-lg">
@@ -234,13 +234,56 @@
                   </div>
                 </div>
               </div>
+              <br>
+              <!--Assignment 1-->
+              <div class="row">
+                <div class="row">
+                  <h2>Assignment 1 - CSS & Bootstrap</h2>
+                </div>
+                <div class="row">
+                  <div class="col-lg">
+                    <a href="#">
+                      <img alt="Assignment1 Image" src="Images/Assignment1Image.jpg" width="650" height="500">
+                    </a>
+                  </div>
+                  <div class="col-lg">
+                    <p>In this assignment we were tasked to create a webpage with a focus on CSS and Bootstrap elements. We also used the fontawesome library for emoticons<br>
+                      Skills Learned: <br>
+                      <ul>
+                        <li>CSS Basics</li>
+                        <li>Bootstrap Basics</li>
+                        <li>Linked Video</li>
+                        <li>Font Awesome Library</li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!--Exercises-->
+              <div class="row">
+                <div class="row">
+                  <br>
+                  <h2>In-Class Exercises</h2>
+                </div>
+                <div class="row">
+                  <div class="col-lg">
+                    <a href="Exercises/Exercises.html">
+                      <img alt="Exercises Image" src="Images/ExercisesImage.jpg" width="650" height="500">
+                    </a>
+                  </div>
+                  <div class="col-lg">
+                    <p>This links to a page with all of our In-Class Exercises all in one place.
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
             <br>
             <!--Contact Row-->
             <div class="row justify-content-center" id="scrollspyHeading4">
               <!--Heading for Contact Row-->
               <div class="row">
-                <h1><i class="fa-solid fa-address-book"></i>Contact</h1>
+                <h1><i class="fa-solid fa-address-book"></i> Contact</h1>
               </div>
               <!--Contact Content-->
               <div class="row">
