--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </head>
     <body>
       <!--Navbar-->
-      <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+      <nav id="navbar-example2" class="navbar navbar-light px-3">
         <a class="navbar-brand" href="#">Derek Tomassi Jr</a>
         <ul class="nav nav-pills">
           <li class="nav-item">
