Changed Website Colors

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
               <!--Assignment 0-->
               <div class="row">
                 <div class="row">
-                  <h2>Assignment 0 - Area Maps</h2>
+                  <h2><a href="Assignments/Assignment0/Assignment0.html" class="blackLink">Assignment 0 - Area Maps</a></h2>
                 </div>
                 <div class="row">
                   <div class="col-lg">
@@ -238,7 +238,7 @@
               <!--Assignment 1-->
               <div class="row">
                 <div class="row">
-                  <h2>Assignment 1 - CSS & Bootstrap</h2>
+                  <h2><a href="#" class="blackLink">Assignment 1 - CSS & Bootstrap</a></h2>
                 </div>
                 <div class="row">
                   <div class="col-lg">
@@ -263,7 +263,7 @@
               <div class="row">
                 <div class="row">
                   <br>
-                  <h2>In-Class Exercises</h2>
+                  <h2><a href="Exercises/Exercises.html" class="blackLink">In-Class Exercises</a></h2>
                 </div>
                 <div class="row">
                   <div class="col-lg">
@@ -290,9 +290,9 @@
                 <h3>I'm Currently Looking for Software Engineering Internships</h3>
                 <p>Please feel free to contact me via email or LinkedIn for any work opportunities</p>
                 <br>
-                <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:derektomassi@me.com" class="contactLink">Email</a></h4>
-                <h4><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/derek-t-a81447209/" class="contactLink">Linkedin</a></h4>
-                <h4><i class="fa-brands fa-github"></i> <a href="https://github.com/DerekTomassiJr" class="contactLink">GitHub</a></h4>
+                <h4><i class="fa-solid fa-envelope"></i> <a href="mailto:derektomassi@me.com" class="blackLink">Email</a></h4>
+                <h4><i class="fa-brands fa-linkedin"></i> <a href="https://www.linkedin.com/in/derek-t-a81447209/" class="blackLink">Linkedin</a></h4>
+                <h4><i class="fa-brands fa-github"></i> <a href="https://github.com/DerekTomassiJr" class="blackLink">GitHub</a></h4>
               </div>
             </div>
           </div>
