--- a/index.html
+++ b/index.html
@@ -259,6 +259,31 @@
                   </div>
                 </div>
               </div>
+              <!--Assignment 3-->
+              <!--Assignment 1-->
+              <div class="row">
+                <div class="row">
+                  <h2><a href="Assignments/Assignment3/assignment3.html" class="blackLink">Assignment 3 - JavaScript & YouTube API</a></h2>
+                </div>
+                <div class="row">
+                  <div class="col-lg">
+                    <a href="Assignments/Assignment3/assignment3.html">
+                      <img alt="Assignment1 Image" src="Images/Assignment3Image.png" width="650" height="500">
+                    </a>
+                  </div>
+                  <div class="col-lg">
+                    <p>In this assignment we had to use the YouTube API to take put a YouTube video on our webpage and if the video is out of the viewport then the video will pause and then
+                      play again when back in the viewport.<br>
+                      Skills Learned: <br>
+                      <ul>
+                        <li>JavaScript Basics</li>
+                        <li>YouTube API</li>
+                        <li>Document Object Model</li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+              </div>
               <!--Exercises-->
               <div class="row">
                 <div class="row">
