--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@
               <!--Assignment 1-->
               <div class="row">
                 <div class="row">
-                  <h2><a href="#" class="blackLink">Assignment 1 - CSS & Bootstrap</a></h2>
+                  <h2><a href="Assignments/Assignment1/Assignment1.html" class="blackLink">Assignment 1 - CSS & Bootstrap</a></h2>
                 </div>
                 <div class="row">
                   <div class="col-lg">
-                    <a href="#">
+                    <a href="Assignments/Assignment1/Assignment1.html">
                       <img alt="Assignment1 Image" src="Images/Assignment1Image.jpg" width="650" height="500">
                     </a>
                   </div>
