--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
                 </div>
               </div>
               <!--Assignment 3-->
-              <!--Assignment 1-->
               <div class="row">
                 <div class="row">
                   <h2><a href="Assignments/Assignment3/assignment3.html" class="blackLink">Assignment 3 - JavaScript & YouTube API</a></h2>
@@ -279,6 +278,30 @@
                         <li>JavaScript Basics</li>
                         <li>YouTube API</li>
                         <li>Document Object Model</li>
+                      </ul>
+                    </p>
+                  </div>
+                </div>
+              </div>
+              <!--Practice Exam-->
+              <div class="row">
+                <div class="row">
+                  <h2><a href="Assignments/PracticeExam/practiceExam.html" class="blackLink">Practice Midterm - Making a Calendar w/ JavaScript & CSS</a></h2>
+                </div>
+                <div class="row">
+                  <div class="col-lg">
+                    <a href="Assignments/PracticeExam/practiceExam.html">
+                      <img alt="Assignment1 Image" src="Images/PracticeMidtermImage.png" width="650" height="500">
+                    </a>
+                  </div>
+                  <div class="col-lg">
+                    <p>To practice for skills for our midterm we had to create a calendar that would go off a list off information provided by the user and check for user input error. The final result
+                      would result in a calendar for the month provided with days falling on a Sunday highlighted in red.<br>
+                      Skills Learned: <br>
+                      <ul>
+                        <li>Practicing JavaScript Skills</li>
+                        <li>Editing HTML with JavaScript code</li>
+                        <li>Handling Error Cases</li>
                       </ul>
                     </p>
                   </div>
