--- a/Node3-Form/public/madlibs.html
+++ b/Node3-Form/public/madlibs.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Forms</title>
+    <title>Madlibs</title>
     <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
